--- a/docs/style.css
+++ b/docs/style.css
@@ -172,6 +172,75 @@ body{
     margin-bottom: 100px;
 }
 
+.expenses{
+    background: linear-gradient(103.11deg, #FF8000 0%, #FF8000 40.95%, #FFD600 100%);
+    min-height: 835px;
+}
+
+.expenses__title{
+    font-weight: 700;
+    font-size: 45px;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.expenses__cards{
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-bottom: 100px;
+}
+
+.expenses__card{
+    max-width: 360px;
+    height: 260px;
+    background-color: #fff;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.expenses__card.final{
+    background: linear-gradient(127.44deg, #FFD600 0%, #FF8000 100%);
+border: 2px solid #FFFFFF;
+}
+
+.expenses__card__price.final, .expenses__card__text.final{
+    color: #fff;
+}
+
+.expenses__card__price{
+    font-weight: 900;
+    font-size: 65px;
+    text-align: center;
+    color: #FF8B0F;
+}
+
+.expenses__card__text{
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+}
+
+@media (max-width: 1000px) {
+    .expenses__cards{
+        grid-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+    }
+    .works__cards{
+        grid-template-columns: 1fr 1fr ;
+        justify-items: center;
+        grid-gap: 20px;
+        }
+}
+
+
 @media (max-width: 767px) {
     .intro__texts{
         max-width: 100%;
@@ -201,9 +270,9 @@ body{
         padding: 10px;
     }
     .works__cards{
-    grid-template-columns: 1fr 1fr ;
-    justify-items: center;
-    grid-gap: 20px;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        grid-gap: 20px;
     }
 
     .works__card__text{
@@ -224,6 +293,13 @@ body{
 
     .works__title.quotes{
         font-size: 20px;
+    }
+    .expenses__cards{
+        grid-gap: 20px;
+        grid-template-columns: 1fr ;
+    }
+    .expenses__title{
+        font-size: 40px;
     }
 }
 
