--- a/docs/style.css
+++ b/docs/style.css
@@ -228,6 +228,36 @@ border: 2px solid #FFFFFF;
     text-align: center;
 }
 
+.plus{
+    min-height: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 100px;
+    margin-bottom: 50px;
+}
+
+.plus__text{
+    font-weight: 700;
+    max-width: 425px;
+    font-size: 45px;
+}
+
+.plus__price span{
+    font-weight: 900;
+    font-size: 100px;
+    color: #FF8000;
+}
+
+.plus__price{
+    border-left: 4px solid#E5E5E5;
+    padding-left: 150px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 25px;
+}
+
 @media (max-width: 1000px) {
     .expenses__cards{
         grid-gap: 20px;
@@ -300,6 +330,25 @@ border: 2px solid #FFFFFF;
     }
     .expenses__title{
         font-size: 40px;
+    }
+    .plus{
+        flex-direction: column;
+        justify-content: center;
+        
+    }
+    .plus__text{
+        margin-bottom: 40px;
+        text-align: center;
+        font-size: 30px;
+    }
+    .plus__price span {
+        font-size: 45px;
+    }
+    .plus__price{
+        border-left: 0;
+        padding-left: 0;
+        border-top: 4px solid#E5E5E5;
+        padding-top: 50px;
     }
 }
 
