--- a/docs/style.css
+++ b/docs/style.css
@@ -258,6 +258,103 @@ border: 2px solid #FFFFFF;
     font-size: 25px;
 }
 
+.client{
+    overflow: hidden;
+    max-width: 1040px;
+    min-height: 486px;
+
+    border: 4px solid #FF8B0F;
+    box-sizing: border-box;
+    border-radius: 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+
+    margin-bottom: 100px;
+}
+
+.client__info{
+    padding: 50px;
+}
+
+.client__title{
+    max-width: 306px;
+    font-weight: 700;
+    font-size: 45px;
+    margin-bottom: 15px;
+}
+
+.client__text{
+    max-width: 535px;
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.client__info__images{
+    display: flex;
+    align-items: center;
+}
+
+.client__info__img{
+    margin-right: 30px;
+}
+
+.pluses__subtitle{
+    font-size: 100px;
+    text-align: center;
+    font-weight: 700;
+    background: linear-gradient(180deg, #FF8000 0%, #FF8000 36.26%, #FFD600 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 100px;
+}
+
+.pluses__title{
+    padding-top: 15px;
+    font-weight: 700;
+    font-size: 45px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.pluses__text{
+    margin-top: 50px;
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 25px;
+    text-align: center;
+}
+
+.clients{
+    margin-top: 100px;
+}
+
+.client__photos{
+    max-width: 100%;
+}
+
+.clients__img{
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 50px;
+}
+
+.clients__img img{
+    display: block;
+    max-width: 100%;
+}
+
+/*.clients__img:first-child{
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}*/
+
+
 @media (max-width: 1000px) {
     .expenses__cards{
         grid-gap: 20px;
@@ -283,8 +380,7 @@ border: 2px solid #FFFFFF;
     .intro__title{
         width: 100%;
         font-size: 30px;
-    line-height: 50px;
-
+        line-height: 50px;
     }
     .intro__title span{
         font-size: 40px;
@@ -349,6 +445,37 @@ border: 2px solid #FFFFFF;
         padding-left: 0;
         border-top: 4px solid#E5E5E5;
         padding-top: 50px;
+    }
+    .client{
+        display: block;
+    }
+    .client__info__images{
+        display: block;
+
+    }
+    .client__info{
+        padding: 15px;
+    }
+    .client__img{
+        width: 100%;
+    }
+    .client__info__img{
+        margin-right: 0px;
+        display: block;
+        width: fit-content;
+        margin: 0 auto;
+    }
+    .client__text, .client__title{
+        text-align: center;
+    }
+    .pluses__title{
+        font-size: 30px;
+    }
+    .pluses__subtitle{
+        font-size: 50px;
+    }
+    .pluses__text{
+        font-size: 14px;
     }
 }
 
